Updated PublicLocationControler, ActivityLogResponseDTO, ActivityLogService & UserService